--- a/template.css
+++ b/template.css
@@ -1,4 +1,6 @@
-ombre{
-  width:50px;
-  height:50px;
+.ombre{
+  width:500px;
+  height:500px;
+  box-shadow: 0 10px 40px rgba(0,0,0,0.8);
+    background-image: linear-gradient(to right, red , yellow);
 }
